-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.7.0 Beta3
-
None
-
-
1ebd8ef85 (dev), c9560d30e (6.7), 72571aac9 (6.6), 259b281a0 (tqtc/lts-6.5)
Linux Ubuntu 22.04
Qt Creator 12.0.2
Steps to reproduce:
- Open and run - https://doc.qt.io/qt-6/qtquick-quickwidgets-quickwidget-example.html
- Click Window > Add tab widget
- Then click 'Break out to top-level window'
- Close the main window using 'X' button.
- Click 'Move back under tab widget'
Expected: The window should be closed when the main window is closed.
Actual: The window is not closed. Clicking 'Move back...' button causes the crash.
Reproducibility: 100%
- relates to
-
QTQAINFRA-6104
Qt Test Attack - Q1, 2024
-
- Open
-